add deftones icon, remoção dos legacy e atualização css externo

--- a/front-aula-09-1sem/index.html
+++ b/front-aula-09-1sem/index.html
@@ -12,44 +12,6 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="shortcut icon" href="./assets/img/deftonesicon.jpg">
 
-    <!-- <style>
-        /* É um comentário em CSS */
-        /* Exemplo de um seletor comum: 
-        REGRA CSS MODELO:
-            seletor {
-                propriedade: valor;
-            }
-        
-        h1 {
-                color: red;
-                text-align: center;
-            }
-        */
-        header h1 {
-            color: red;
-            text-align: center;
-        }
-
-        header a {
-            text-decoration: none;
-            color: black;
-        }
-
-        div {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        div img {
-            width: 25%;
-            min-width: 10%;
-            border-radius: 5px;
-            box-shadow: 0 0 5px black;
-        }
-
-    </style> -->
-
 </head>
 
 <body>
@@ -61,16 +23,14 @@
             <nav aria-label="menu-principal">
                 </div>
 
-                <body style="background-color: #454545;"></body>
                 <p>
                     <center>
-                        <font size="15" <font color=white>White Pony - Deftones
+                        <font size="15"> White Pony - Deftones
                         </font>
                     </center>
                 </p>
 
                 <p>
-                    <font color=white>
                         <font size="5">
 
                             White Pony é o terceiro álbum de estúdio da banda americana de metal alternativo Deftones,
@@ -99,7 +59,6 @@
 
         </center>
         <ul role="menu">
-            <li><a href="index.html"> Home</a></li>
             <li><a href="./members.html">Membros</a></li>
             <li><a href="./infos.html">informações</a></li>
             <li><a href="./assets/about.html">About</a></li>
@@ -115,7 +74,7 @@
         </center>
         <main>
             <section>
-                <h2 id=" contato">
+                <h2 id="contato">
                 <font color=white>Contato </font>
                 </h2>
                 <p><a href="https://www.fiap.com.br">&#128205; Fiap</a></p>
