--- a/front-aula-09-1sem/infos.html
+++ b/front-aula-09-1sem/infos.html
@@ -10,46 +10,7 @@
     <title>Meu Primeiro Site</title>
 
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./assets/img/favicon.png">
-
-    <!-- <style>
-        /* É um comentário em CSS */
-        /* Exemplo de um seletor comum: 
-        REGRA CSS MODELO:
-            seletor {
-                propriedade: valor;
-            }
-        
-        h1 {
-                color: red;
-                text-align: center;
-            }
-        */
-        header h1 {
-            color: red;
-            text-align: center;
-        }
-
-        header a {
-            text-decoration: none;
-            color: black;
-        }
-
-        div {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        div img {
-            width: 25%;
-            min-width: 10%;
-            border-radius: 5px;
-            box-shadow: 0 0 5px black;
-        }
-
-    </style> -->
-
+    <link rel="shortcut icon" href="./assets/img/deftonesicon.jpg">
 </head>
 
 <body>
