--- a/front-aula-09-1sem/assets/about.html
+++ b/front-aula-09-1sem/assets/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
+    <link rel="shortcut icon" href="./assets/img/deftonesicon.jpg">
 </head>
 
 <body>
